--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
 <h1> This is Git Class</h1>
+<h1> This is Git Class</h1>
+<h1> This is Git Class</h1>
+<h1> This is Git Class</h1>
+<h1> This is Git Class</h1>
+<h1> This is Git Class</h1>
+<h1> This is Git Class</h1>
